--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
         }
         nav {
-            background: #00aff5;
+            background: #043447;
             color: #fff;
             padding: 0.5rem 0;
         }
