--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             width: 80%;
             margin: 0 auto;
             overflow: hidden;
+            text-align: center;
         }
         section {
             margin: 2rem 0;
